--- a/.github/workflows/set-move-on-pr.yml
+++ b/.github/workflows/set-move-on-pr.yml
@@ -12,7 +12,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: 1.x
+          go-version: 1.22
 
     - name: Run main.go
       run: go run main.go
