--- a/.github/workflows/set-move-on-pr.yml
+++ b/.github/workflows/set-move-on-pr.yml
@@ -7,12 +7,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
 
     - name: Set up Go
-      uses: actions/setup-go@v2
+      uses: actions/setup-go@v4
       with:
           go-version: 1.22
+
+      name: Install dependencies
+      run: go get.
 
     - name: Run main.go
       run: go run main.go
