--- a/.github/workflows/set-move-on-pr.yml
+++ b/.github/workflows/set-move-on-pr.yml
@@ -14,7 +14,7 @@ jobs:
       with:
           go-version: 1.22
 
-      name: Install dependencies
+    - name: Install dependencies
       run: go get.
 
     - name: Run main.go
