--- a/.github/workflows/set-move-on-pr.yml
+++ b/.github/workflows/set-move-on-pr.yml
@@ -14,8 +14,8 @@ jobs:
       with:
           go-version: 1.22
 
-    - name: Install dependencies
-      run: go get .
+    - name: Run go generate
+      run: go generate ./...
 
     - name: Run main.go
       run: go run main.go
