--- a/.github/workflows/set-move-on-pr.yml
+++ b/.github/workflows/set-move-on-pr.yml
@@ -8,6 +8,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+      with:
+        ref: ${{ github.head_ref }}
 
     - name: Set up Go
       uses: actions/setup-go@v4
