--- a/.github/workflows/set-move-on-pr.yml
+++ b/.github/workflows/set-move-on-pr.yml
@@ -25,4 +25,9 @@ jobs:
         git config --global user.email 'actions@github.com'
         git add README.md
         git commit -m "Set move in README.md"
-        git push
+
+    - name: Push changes
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.GH_TICTACTOE_PAT }}
+        branch: ${{ github.head_ref }}
